# opener

./: Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  mime_helpers.rs  opt.rs
src/config/: default_config.toml  edit_config.rs  open_config.rs  utils.rs
src/opt/: addtype.rs  ext_mime_path.rs  subcommand.rs
src/opt/subcommand/: add.rs  open_or_preview.rs  query.rs  set.rs
