[package]
name = "opener"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = "1.0.115"
serde_derive = "1.0.115"
mime = "0.3.16"
mime_guess = "2.0.3"
anyhow = "1.0.32"
log = "0.4.11"
env_logger = "0.7.1"
clap-verbosity-flag = "0.3.1"
structopt = "0.3.16"
colored = "2.0.0"
infer = "0.2.3"
tree_magic = "0.2.3"
